fix: align column card

--- a/src/styles/pages/homepage.scss
+++ b/src/styles/pages/homepage.scss
@@ -11,7 +11,7 @@
     width: 100%;
 
     @include styleFor(tablet-and-up) {
-      width: calc((100% - 24px) * 2 / 3);
+      width: calc((100% - 1.2rem) * 2 / 3);
     }
   }
 
@@ -19,7 +19,7 @@
     width: 100%;
 
     @include styleFor(tablet-and-up) {
-      width: calc((100% - 24px) / 3);
+      width: calc((100% - 4.8rem) / 3);
     }
   }
 }
